--- a/tex-inputs/mkts2015-main.sty
+++ b/tex-inputs/mkts2015-main.sty
@@ -10,7 +10,7 @@
 % 888  888  888 888  888  "Y888  88888P' 888888888   "Y8888P"  8888888  "Y8888P"
 % ==========================================================================================================
 
-\ProvidesPackage{mkts2015-base}
+% \ProvidesPackage{mkts2015-main}
 
 
 % ==========================================================================================================
