commit before merge

--- a/tex-inputs/mkts2015-article.sty
+++ b/tex-inputs/mkts2015-article.sty
@@ -270,14 +270,14 @@
 \endgroup
 }
 
-\usepackage{/Volumes/Storage/downloads/picins/picins}
-\pichskip{1mm}% horizontal distance between midashi glyph and entry text
+% \usepackage{/Volumes/Storage/downloads/picins/picins}
+% \pichskip{1mm}% horizontal distance between midashi glyph and entry text
 
 
-\newcommand{\zzwbfTableInText}[1]{
-  \parpic(34mm,30mm)(-2.35mm,16.7mm)[l][lb]{\zzwbfTable}
-  #1\par\picskip{0}
-  }
+% \newcommand{\zzwbfTableInText}[1]{
+%   \parpic(34mm,30mm)(-2.35mm,16.7mm)[l][lb]{\zzwbfTable}
+%   #1\par\picskip{0}
+%   }
 
 % ----------------------------------------------------------------------------------------------------------
 % \usepackage[bottom]{footmisc}
