adding html blocks, inline, comment handling

--- a/texts/demo/.content.tex
+++ b/texts/demo/.content.tex
@@ -3,8 +3,14 @@
 
 \section{HTML Blocks
 }
-xxx¶\par
-xxx¶\par
+XXX\mktsErrorbox{unhandled event: [ '(', 'div', \{\}, \{ within\_text\_literal: false, map: [ 0, 1 ] \} ]}helo \mktsItalic{world} and \mktsBold{everyone}\mktsErrorbox{unhandled event: [ ')',
+  'div',
+  null,
+  \{ within\_text\_literal: false, map: [ 0, 1 ] \} ]}¶\par
+1xxx¶\par
+2xxx¶\par
 A paragraph with \mktsItalic{\mktsBold{some}} HTML in it.¶\par
 Here’s MD with \mktsItalic{single} and \mktsBold{double} stars.¶\par
-xxx¶\par
+3xxx¶\par
+XXX¶\par
+4xxx¶\par
