--- a/texts/demo/.content.tex
+++ b/texts/demo/.content.tex
@@ -3,7 +3,7 @@
 
 \section{HTML Blocks
 }
-XXX\mktsErrorbox{unhandled event: [ '(', 'div', \{\}, \{ within\_text\_literal: false, map: [ 0, 1 ] \} ]}helo \mktsItalic{world} and \mktsBold{everyone}\mktsErrorbox{unhandled event: [ ')',
+\mktsErrorbox{unhandled event: [ '(', 'div', \{\}, \{ within\_text\_literal: false, map: [ 0, 1 ] \} ]}helo \mktsItalic{world} and \mktsBold{everyone}\mktsErrorbox{unhandled event: [ ')',
   'div',
   null,
   \{ within\_text\_literal: false, map: [ 0, 1 ] \} ]}¶\par
@@ -12,5 +12,5 @@ XXX\mktsErrorbox{unhandled event: [ '(', 'div', \{\}, \{ within\_text\_literal: 
 A paragraph with \mktsItalic{\mktsBold{some}} HTML in it.¶\par
 Here’s MD with \mktsItalic{single} and \mktsBold{double} stars.¶\par
 3xxx¶\par
-XXX¶\par
+¶\par
 4xxx¶\par
