--- a/tex-inputs/mkts2015-article.sty
+++ b/tex-inputs/mkts2015-article.sty
@@ -145,10 +145,10 @@
 \lineskiplimit=-10pt%
 \lineskip=0pt%
 \topskip=\baselineskip%
-\newcommand{\mktsBold}[1]{{\fontsize{0.8\myFontsize}{0.8\myFontsize}\mktsFontfileUbuntub#1}}
-\newcommand{\mktsItalic}[1]{{\mktsFontfileEbgaramondtwelveitalic#1}}
+\newcommand{\mktsStyleBold}[1]{{\fontsize{0.8\myFontsize}{0.8\myFontsize}\mktsFontfileUbuntub#1}}
+\newcommand{\mktsStyleItalic}[1]{{\mktsFontfileEbgaramondtwelveitalic#1}}
 % ### TAINT need to add space before and after code ###
-\newcommand{\mktsCode}[1]{{\fontsize{0.8\myFontsize}{0.8\myFontsize}%
+\newcommand{\mktsStyleCode}[1]{{\fontsize{0.8\myFontsize}{0.8\myFontsize}%
   \mktsFontfileSourcecodeproregular#1}}
 
 
