--- a/texts/demo/.content.tex
+++ b/texts/demo/.content.tex
@@ -5,23 +5,23 @@
 }
 This section tests HTML that occurs as ‘blocks’ (i.e. as typographical blocks
 that start with an HTML tag) and ‘inline’ (i.e. inside of MD blocks).¶\par
-helo \mktsItalic{world} and \mktsBold{everyone}¶\par
+helo \mktsStyleItalic{world} and \mktsStyleBold{everyone}¶\par
 1xxx¶\par
 2xxx¶\par
-A paragraph with \mktsItalic{\mktsBold{some}} HTML in it.¶\par
-Here’s MD with \mktsItalic{single} and \mktsBold{double} stars.¶\par
+A paragraph with \mktsStyleItalic{\mktsStyleBold{some}} HTML in it.¶\par
+Here’s MD with \mktsStyleItalic{single} and \mktsStyleBold{double} stars.¶\par
 3xxx¶\par
 4xxx¶\par
 
 \chapter{Regions
 }
-Regions are started and ended using \mktsCode{@@@} (triple at-signs); the opener
+Regions are started and ended using \mktsStyleCode{@@@} (triple at-signs); the opener
 must be followed by a key word indicating the region’s type.¶\par
 
 \section{Code
 }
-Here’s \mktsCode{some code} within a fenced block:¶\par
-\begingroup\obeyalllines{}\mktsCode{This is a code region;
+Here’s \mktsStyleCode{some code} within a fenced block:¶\par
+\begingroup\obeyalllines{}\mktsStyleCode{This is a code region;
 lines are kept as they appear in the MD manuscript,
 but in addition,
 the font is monospaced
