exp. changing styles to argument-less 'groupish' command

--- a/tex-inputs/mkts2015-article.sty
+++ b/tex-inputs/mkts2015-article.sty
@@ -148,8 +148,9 @@
 \newcommand{\mktsStyleBold}[1]{{\fontsize{0.8\myFontsize}{0.8\myFontsize}\mktsFontfileUbuntub#1}}
 \newcommand{\mktsStyleItalic}[1]{{\mktsFontfileEbgaramondtwelveitalic#1}}
 % ### TAINT need to add space before and after code ###
-\newcommand{\mktsStyleCode}[1]{{\fontsize{0.8\myFontsize}{0.8\myFontsize}%
-  \mktsFontfileSourcecodeproregular#1}}
+\newcommand{\mktsStyleCode}{{%
+  \fontsize{0.8\myFontsize}{0.8\myFontsize}%%
+  \mktsFontfileSourcecodeproregular}}
 
 
 % ----------------------------------------------------------------------------------------------------------
