re-implemented explicit and implicit single/multi-column switching

--- a/tex-inputs/mkts2015-main.sty
+++ b/tex-inputs/mkts2015-main.sty
@@ -488,3 +488,9 @@
 \usepackage{varwidth}
 \newcommand\mktsErrorbox[1]{%
   \colorbox{red!60}{\begin{varwidth}{\dimexpr\linewidth-2\fboxsep}#1\end{varwidth}}}
+
+\newcommand{\mktsShowpar}{%
+  \makebox[0mm]{\color{red!25}¶}}
+% \usepackage{transparent}
+% \newcommand{\mktsShowpar}{%
+%   \makebox[0mm]{\color{red!25}\texttransparent{0.5}¶}}
