--- a/texts/demo/.content.tex
+++ b/texts/demo/.content.tex
@@ -1,6 +1,6 @@
 
 % begin of MD document
-\mktsShowpar\par
+\begin{multicols}{2}\mktsShowpar\par
 \end{multicols}
 \section{MKTS Regions \cn{中國皇帝}
 }
@@ -19,7 +19,7 @@ at the start of a line, immediately followed by a command name such as
 triple at-sign without a command name. Nested regions are possible; for example,
 you can put a {\mktsStyleCode{}@@@keep-lines} region inside a {\mktsStyleCode{}@@@single-column} region as
 done here:\mktsShowpar\par
-Here are some formulas:
+\end{multicols}Here are some formulas:
 \mktsShowpar\par
 \begingroup\obeyalllines{}{\mktsStyleCode{}u-cjk/4e36}  \cn{丶}   \cnxJzr{}
 {\mktsStyleCode{}u-cjk/4e37}  \cn{丷}   \cnxJzr{}\cn{丶}\cnxJzr{}
@@ -37,10 +37,10 @@ indicates the end of the {\mktsStyleCode{}keep-lines} region; since the
 {\mktsStyleCode{}single-column} region is still active, however, {\mktsStyleItalic{}this
 paragraph runs across the entire width} of the documents text
 area.
-Now a {\mktsStyleCode{}\}single-column} MKTS/MD event has been encountered
+\begin{multicols}{2}Now a {\mktsStyleCode{}\}single-column} MKTS/MD event has been encountered
 that was triggered by a triple-at command in the manuscript;
 accordingly, typesetting is reverted back to multi-column mode,
 which is why you can see this paragraph set in two columns.\mktsShowpar\par
-\mktsShowpar\par
+\end{multicols}\mktsShowpar\par
 
 % end of MD document
