remove extraneous quote replacements

--- a/texts/demo/.content.tex
+++ b/texts/demo/.content.tex
@@ -1,12 +1,5 @@
 
 % begin of MD document
-X\textbackslash{}fooX\mktsShowpar\par
-X\textbackslash{}eekX\mktsShowpar\par
-X\textbackslash{}effX\mktsShowpar\par
-X\textbackslash{}yyyX\mktsShowpar\par
-\textbackslash{}effing\mktsShowpar\par
-x\textbackslash{}234y\mktsShowpar\par
-xx\&xx\mktsShowpar\par
-xx\&xx"xxÆxx\mktsShowpar\par
+foo ‘bar’ baz.\mktsShowpar\par
 
 % end of MD document
