remove extraneous method for entity resolution

--- a/texts/demo/.content.tex
+++ b/texts/demo/.content.tex
@@ -1,5 +1,5 @@
 
 % begin of MD document
-foo ‘bar’ baz.\mktsShowpar\par
+foo ‘bar’ baz. \cnjzr{} beautiful!\mktsShowpar\par
 
 % end of MD document
