--- a/tex-inputs/mkts2015-consolidated.sty
+++ b/tex-inputs/mkts2015-consolidated.sty
@@ -1,4 +1,26 @@
 
+
+% ==========================================================================================================
+% Unicode and CJK Handling
+% ----------------------------------------------------------------------------------------------------------
+\usepackage{fontspec}
+% \usepackage{/home/flow/own/tex-packages/xeCJK-2.4.6-r306/xeCJK}
+
+% Should fix CJK linebreaks as per http://tex.stackexchange.com/a/38276/28067
+% \XeTeXlinebreaklocale "ja"% for Japanese
+% \XeTeXlinebreakskip 0pt plus 0.1pt% sets the skip
+
+\usepackage{leading}
+% \usepackage{/Volumes/Storage/io/jizura-xelatex/tex-inputs/utils}
+% \usepackage{/Users/flow/JIZURA/flow/dictionary/tex-inputs/accentbx/accentbx}
+\usepackage{cxltx-style-accentbox}
+\usepackage{cxltx-style-trm}
+% \usepackage{pbox}
+% \usepackage{array}
+% \let\footruleskip\undefined\usepackage{fancyhdr}
+\usepackage{fixltx2e}
+% \usepackage[usenames,dvipsnames,svgnames,table,x11names]{xcolor}
+\usepackage[factor=1000]{microtype}
 \usepackage{cxltx-style-base}
 \usepackage{cxltx-style-trm}
 % \usepackage{cxltx-style-accentbox}
@@ -9,8 +31,77 @@
 \usepackage{cxltx-style-pushraise}
 \usepackage{cxltx-style-smashbox}
 
+% ==========================================================================================================
+% Page Layout
+% ----------------------------------------------------------------------------------------------------------
+\usepackage[
+  % asymmetric,% see http://tex.stackexchange.com/a/42051/28067
+  driver=xetex,
+  % showframe,%
+  % twoside,
+  left=21mm,%
+  right=21mm,%
+  top=18mm,%
+  bottom=11.5mm,%
+  headsep=5mm,%
+  headheight=5mm,%
+  footskip=5mm,%
+  marginparsep=0mm,%
+  marginparwidth=0mm,%
+  includehead=true,%
+  includefoot=true,%
+  includemp=false,%
+  paperwidth=210mm,%
+  paperheight=297mm,%
+  ]{geometry}
+% ..........................................................................................................
+% \usepackage{pagegrid}\pagegridsetup{top-left,step=1mm,arrows=false}
+% \pagegridsetup{top-left,step=4.6667mm,arrows=false}
+% % \pagegridsetup{top-left,step=\myLineheight,arrows=false}
+% % \pagegridsetup{top-left,step=7mm,arrows=false}
+
+% ----------------------------------------------------------------------------------------------------------
+\let\footruleskip\undefined\usepackage{fancyhdr}
+\usepackage{fix2col}% Patch LaTeX's output routine to handle marks correctly with two columns
+\pagestyle{fancy}
+\renewcommand{\headrulewidth}{0mm}
+\renewcommand{\footrulewidth}{0mm}
+\fancyhead[OR]{\prPush{1.1}{\cn{{\mktsFontfileBiaukai{}萬字一覽置換索引}}}}
+\fancyhead[EL]{\cn{{\mktsFontfileBiaukai{}萬字一覽置換索引}}}
+% \fancyhead[EL,OR]{\leftmark}
+% \fancyhead[OL,ER]{\rightmark\cn{{\mktsFontfileBiaukai{}字面萬字一覽}}}
+\fancyfoot[OR]{\prPush{1.1}{\pageNr{\thepage}}}
+\fancyfoot[EL]{\pageNr{\thepage}}
+\fancyfoot[OC,EC]{}
+\fancyfoot[OL,ER]{}
+
+% ----------------------------------------------------------------------------------------------------------
+\usepackage{multicol}
+% \setlength{\multicolsep}{6.0pt plus 2.0pt minus 1.5pt}
+\setlength{\multicolsep}{0mm plus 0mm minus 0mm}
+\setlength{\columnsep}{5mm}
+\setlength\columnseprule{0.155mm}
+
+
+% ==========================================================================================================
+% Nifty stuff
+% ----------------------------------------------------------------------------------------------------------
+% \usepackage{float}
+% \usepackage{wrapfig}
+% \usepackage{enumitem}
+% \usepackage[protrusion=true,final]{/home/flow/own/tex-packages/microtype/microtype} % doesn't work yet
+% \usepackage[protrusion=true,final]{microtype} % doesn't work yet
 \newcommand{\mktsShowpar}{%
   \makebox[0mm]{\color{red!25}¶}}
+
+\newcommand{\mktsInsertblankpage}{\thispagestyle{empty}\mbox{}\newpage}
+
+% thx to http://tex.stackexchange.com/a/11709/28067
+\newcommand*\mktsCleartoleftpage{%
+  \clearpage
+  \ifodd\value{page}\hbox{}\newpage\fi
+}
+
 
 % ----------------------------------------------------------------------------------------------------------
 % fontsizes
@@ -65,3 +156,94 @@
 \newcommand{\mktsStyleCode}{%
   \fontsize{0.8\myFontsize}{0.8\myFontsize}%%
   \mktsFontfileSourcecodeproregular}
+
+
+
+% ==========================================================================================================
+%
+% 8888888888  .d88888b.  888b    888 88888888888  .d8888b.
+% 888        d88P" "Y88b 8888b   888     888     d88P  Y88b
+% 888        888     888 88888b  888     888     Y88b.
+% 8888888    888     888 888Y88b 888     888      "Y888b.
+% 888        888     888 888 Y88b888     888         "Y88b.
+% 888        888     888 888  Y88888     888           "888
+% 888        Y88b. .d88P 888   Y8888     888     Y88b  d88P
+% 888         "Y88888P"  888    Y888     888      "Y8888P"
+%
+% ==========================================================================================================
+%
+
+
+% ==========================================================================================================
+% 2) Display Styles
+% ----------------------------------------------------------------------------------------------------------
+\newcommand{\cjkInterchrSpacing}{\hskip -0.4pt plus 3pt minus 1pt}
+% \newcommand{\cjkInterchrSpacingA}{\hskip -0.4pt plus 3pt minus 1pt}
+\newcommand{\adjustCjkIdeograph}[1]{\prRaise{-0.125}{#1}} % !!!
+% \newcommand{\adjustJzrCjkIdeograph}[1]{\prRaise{-0.125}{#1}} % !!!
+\newcommand{\adjustJzrCjkIdeograph}[1]{\prRaise{-0.125}{\makebox[1.1053\myFontsize]{#1}}} % !!!
+\newcommand{\adjustKatakana}[1]{\cjkInterchrSpacing\prRaise{-0.125}{#1}}
+\newcommand{\adjustHiragana}[1]{\cjkInterchrSpacing\prRaise{-0.125}{#1}}
+\newcommand{\adjustHangeul}[1]{\cjkInterchrSpacing\prRaise{-0.125}{#1}}
+% ..........................................................................................................
+\newcommand{\latin}[1]{{\mktsFontfileEbgaramondtwelveregular#1}}
+% \newcommand{\setPlainLatin}{\renewcommand{\latin}[1]{{\mktsFontfileEbgaramondtwelveregular#1}}}
+% \newcommand{\setCodeLatin}{\renewcommand{\latin}[1]{{\mktsFontfileSunexta#1}}}
+\newcommand{\py}[1]{{\mktsFontfileUbuntur#1}}
+\newcommand{\ncr}[1]{{\mktsFontfileUbuntur#1}}
+\newcommand{\gloss}[1]{{\mktsFontfileEbgaramondtwelveregular#1}}
+% ..........................................................................................................
+\newcommand{\cn}[1]{{\adjustCjkIdeograph{\mktsFontfileSunexta#1}}}
+\newcommand{\cnxa}[1]{{\adjustCjkIdeograph{\mktsFontfileSunexta#1}}}
+\newcommand{\cnxb}[1]{{\adjustCjkIdeograph{\mktsFontfileSunflowerucjkxb#1}}}
+\newcommand{\cnxc}[1]{{\adjustCjkIdeograph{\mktsFontfileHanaminb#1}}}
+\newcommand{\cnxd}[1]{{\adjustCjkIdeograph{\mktsFontfileBabelstonehan#1}}}
+\newcommand{\cncone}[1]{{\adjustCjkIdeograph{\mktsFontfileSunexta#1}}}      	% CJK Compatibility 1
+\newcommand{\cnctwo}[1]{{\adjustCjkIdeograph{\mktsFontfileHanamina#1}}}   				% CJK Compatibility 2
+\newcommand{\cnrone}[1]{{\adjustCjkIdeograph{\mktsFontfileSunexta#1}}}      	% CJK Radicals 1
+\newcommand{\cnrtwo}[1]{{\adjustCjkIdeograph{\mktsFontfileSunexta#1}}}      	% CJK Radicals 2
+\newcommand{\cnsym}[1]{{\adjustCjkIdeograph{\mktsFontfileHanamina#1}}}
+\newcommand{\cnstrk}[1]{{\adjustCjkIdeograph{\mktsFontfileSunexta#1}}}
+% \newcommand{\cnjzr}[1]{{\cn{#1}}}       													% Jizura Font handled by CJK Block Declaration, above
+\newcommand{\cnjzr}[1]{{\adjustJzrCjkIdeograph{\mktsFontfileJizurathreeb#1}}}
+\newcommand{\ka}[1]{\adjustKatakana{\mktsFontfileNanummyeongjo#1}}
+\newcommand{\hi}[1]{\adjustHiragana{\mktsFontfileNanummyeongjo#1}}
+\newcommand{\hg}[1]{\adjustHangeul{\mktsFontfileNanummyeongjo#1}}
+% ..........................................................................................................
+\newcommand{\cnxBabel}[1]{{\adjustCjkIdeograph{\mktsFontfileBabelstonehan#1}}}
+\newcommand{\cnxHanaA}[1]{{\adjustCjkIdeograph{\mktsFontfileHanamina#1}}}
+\newcommand{\cnxHanaB}[1]{{\adjustCjkIdeograph{\mktsFontfileHanaminb#1}}}
+\newcommand{\cnxSunXA}[1]{{\adjustCjkIdeograph{\mktsFontfileSunexta#1}}}
+\newcommand{\cnxJzr}[1]{{\adjustJzrCjkIdeograph{\mktsFontfileJizurathreeb#1}}}
+% \newcommand{\missing}[1]{{\missingFont#1}}
+% ..........................................................................................................
+\newcommand{\jzrStrokeclassZZWBF}{\prPushRaise{-0.1}{-0.1}{{\mktsFontfileJizurathreeb{}}}}
+\newcommand{\jzrStrokeclassOne}{\prPushRaise{-0.1}{-0.1}{{\mktsFontfileJizurathreeb{}}}}
+\newcommand{\jzrStrokeclassTwo}{\prPushRaise{-0.1}{-0.1}{{\mktsFontfileJizurathreeb{}}}}
+\newcommand{\jzrStrokeclassThree}{\prPushRaise{-0.1}{-0.1}{{\mktsFontfileJizurathreeb{}}}}
+\newcommand{\jzrStrokeclassFour}{\prPushRaise{-0.1}{-0.15}{{\mktsFontfileJizurathreeb{}}}}
+\newcommand{\jzrStrokeclassFive}{\prPushRaise{-0.1}{-0.1}{{\mktsFontfileJizurathreeb{}}}}
+\newcommand{\jzrStrokeclassLeftHook}{\prPushRaise{-0.1}{-0.1}{{\mktsFontfileJizurathreeb{}}}}
+\newcommand{\jzrStrokeclassRightHook}{\prPushRaise{-0.1}{-0.1}{{\mktsFontfileJizurathreeb{}}}}
+% ..........................................................................................................
+\newcommand{\jzrStrokeclassTextZZWBF}{\prPushRaise{0}{-0.15}{{\mktsFontfileJizurathreeb{}}}}
+\newcommand{\jzrStrokeclassTextOne}{\prPushRaise{0}{-0.15}{{\mktsFontfileJizurathreeb{}}}}
+\newcommand{\jzrStrokeclassTextTwo}{\prPushRaise{0}{-0.15}{{\mktsFontfileJizurathreeb{}}}}
+\newcommand{\jzrStrokeclassTextTwoHook}{\prPushRaise{0}{-0.15}{{\mktsFontfileJizurathreeb{}}}}
+\newcommand{\jzrStrokeclassTextThree}{\prPushRaise{0}{-0.15}{{\mktsFontfileJizurathreeb{}}}}
+\newcommand{\jzrStrokeclassTextFour}{\prPushRaise{0}{-0.15}{{\mktsFontfileJizurathreeb{}}}}
+\newcommand{\jzrStrokeclassTextFourSlant}{\prPushRaise{0}{-0.15}{{\mktsFontfileJizurathreeb{}}}}
+\newcommand{\jzrStrokeclassTextFive}{\prPushRaise{0}{-0.15}{{\mktsFontfileJizurathreeb{}}}}
+\newcommand{\jzrStrokeclassTextLeftHook}{\prPushRaise{0}{-0.15}{{\mktsFontfileJizurathreeb{}}}}
+\newcommand{\jzrStrokeclassTextRightHook}{\prPushRaise{0}{-0.15}{{\mktsFontfileJizurathreeb{}}}}
+% ..........................................................................................................
+\newcommand{\kai}[1]{{\mktsFontfileKai{}#1}}
+\newcommand{\jzrkai}[1]{{\mktsFontfileJizurathreeb{}#1}}
+% ..........................................................................................................
+\newcommand{\pageNr}[1]{{\fontsize{2.5mm}{2.5mm}\mktsFontfilePtsans#1}}
+\newcommand{\sfncr}[1]{{\fontsize{2mm}{2mm}\jzrFontInputMonoCompressedLight#1}}
+\newcommand{\wbf}[1]{{\fontsize{2mm}{2mm}\jzrFontInputMonoCompressedMedium#1}}
+\newcommand{\pageNrText}[1]{{\fontsize{3mm}{5mm}\mktsFontfilePtsans#1}}
+\newcommand{\wbfText}[1]{{\fontsize{3mm}{5mm}\jzrFontInputMonoCompressedMedium#1}}
+
+
